# auto-testing

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  tox copy.ini  tox.ini
.github/workflows/: tests.yml
tests/: test_myapp.py  test_myfunc.py  test_mypackfunc.py
