[metadata]
name = myapp
description = my super app
author = Pablo Hernandez
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages =
    myapp
install_requires =
    requests>=2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
myapp = py.typed

[flake8]
max-line-length = 160