[metadata]
name = myapp
description = my super app
author = Pablo Hernandez
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages =
    src
install_requires =
    requests>=2
python_requires = >=3.12
zip_safe = no

[options.extras_require]
testing =
    pytest>=8.3
    pytest-cov>=6.0
    mypy>=1.15
    flake8>=7.1
    tox>=4.25

[options.package_data]
myapp = py.typed

[flake8]
max-line-length = 160